fixed bottom padding on admin page overflows

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -209,6 +209,14 @@
                 overflow-y: auto;
                 padding: 16px;
                 margin-bottom: 40px;
+
+                &:after {
+                    content: '';
+                    position: relative;
+                    display: block;
+                    width: 100%;
+                    height: 16px;
+                }
             }
         }
     }
